NCSO-24 #resolve #time 1h #comment I added the provided logo, though it's too small to read at the moment

--- a/app/frontend/angularjs/app/styles/main.css
+++ b/app/frontend/angularjs/app/styles/main.css
@@ -99,6 +99,11 @@ h3 {
     overflow: auto;
 }
 
+.header-image {
+    height: 10%;
+    width: 10%;
+}
+
 .sparql-div h4 {
     text-align: center;
 }
